Change VBL Pen tool to use Alt+MWheel for radius changes
Also fix the instructions to not mention snap-to-grid.